004_terraform_variables/01_input_variables/v8_complex_input_variable_types/t1_variable_type_list/c3_security_groups.tf
# Create Security Group - SSH Traffic
resource "aws_security_group" "vpc_ssh" {
  name        = "VPC SSH"
  description = "Allow SSH inbound traffic"
  # vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow Port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all IP and Ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh"
  }
}

# Create Security Group - Web Traffic
resource "aws_security_group" "vpc_web" {
  name        = "VPC WEB"
  description = "Allow Web inbound traffic"
  # vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow Port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all IP and Ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}
